docs(review-log): HDP MLlib shim arc and post-shim cleanups
Single 2026-05-07 entry covering the MLlib shim landing, the six-lesson
walkthrough, and six post-walkthrough refactor detours (drop wrapper,
LDA-shim trained-accessor backport, cumulative-mass active-topic-count,
expected_corpus_betas dedup, fit_lda_local backport, topic_count_at_mass
lift). Notes the latent property/Param collision caught in the LDA shim,
the corrected E[β] docstring, and the empirical cloud-run feedback.
Parks γ/α/η optimization as the next session's focus.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>